# quiqui_ladies_py_workshop

./: .gitignore  README.md  pyproject.toml  settings.toml
clean architecture/example1/1 - infra/: README.md
clean architecture/example1/1 - infra/schemas/: user_table.py
clean_architecture/example1/1_infra/schemas/: user_table.py
clean_architecture/example1/domain/enums/: user_status_enum.py
clean_architecture/example1/domain/models/: user.py
clean_architecture/example1/domain/repository/: user_repository_meta.py
clean_architecture/example1/infra/repository/: user_repository_mysql.py
clean_architecture/example1/infra/schemas/: user_table.py
enums/: ClothingTypeEnum.py
